<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbl_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_note" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@id/sales_order_id"
        android:layout_toRightOf="@+id/lbl_note"
        android:paddingRight="6dp"
        android:text="" />

    <TextView
        android:id="@+id/lbl_note_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_note"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_note_language" />

    <TextView
        android:id="@+id/note_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note"
        android:layout_toRightOf="@id/lbl_note_language"
        android:paddingRight="6dp"
        android:text="" />

    <TextView
        android:id="@+id/lbl_item_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_note_language"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_item_position" />

    <TextView
        android:id="@+id/item_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note"
        android:layout_toRightOf="@id/lbl_item_position"
        android:paddingRight="6dp"
        android:text="" />


    <TextView
        android:id="@+id/lbl_currency_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_item_position"
        android:hint="@string/ui_detail_currency_code"
        android:paddingRight="6dp" />

    <TextView
        android:id="@+id/currency_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_position"
        android:layout_toRightOf="@id/lbl_currency_code"
        android:paddingRight="6dp"
        android:text="" />

    <TextView
        android:id="@+id/lbl_gross_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_currency_code"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_gross_amount" />

    <TextView
        android:id="@+id/gross_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currency_code"
        android:layout_toRightOf="@+id/lbl_gross_amount"
        android:paddingRight="6dp"
        android:text="" />

    <TextView
        android:id="@+id/lbl_tax_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_gross_amount"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_tax_amount" />

    <TextView
        android:id="@+id/tax_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gross_amount"
        android:layout_toRightOf="@id/lbl_tax_amount"
        android:paddingRight="6dp"
        android:text="" />

    <TextView
        android:id="@+id/lbl_net_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_tax_amount"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_net_amount" />

    <TextView
        android:id="@+id/net_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tax_amount"
        android:layout_toRightOf="@+id/lbl_net_amount"
        android:paddingRight="6dp"
        android:text="" />

    <TextView
        android:id="@+id/lbl_delivery_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_net_amount"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_delivery_date" />

    <TextView
        android:id="@+id/delivery_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/net_amount"
        android:layout_toRightOf="@id/lbl_delivery_date"
        android:paddingRight="6dp"
        android:text="" />

    <TextView
        android:id="@+id/lbl_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/net_amount"
        android:layout_toRightOf="@id/customer_id"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_quantity" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/net_amount"
        android:layout_toRightOf="@+id/lbl_quantity"
        android:paddingRight="6dp"
        android:text="" />


    <TextView
        android:id="@+id/lbl_quantity_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lbl_quantity"
        android:paddingRight="6dp"
        android:text="@string/ui_detail_quantity_unit" />

    <TextView
        android:id="@+id/quantity_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity"
        android:layout_toRightOf="@id/lbl_lifecycle_status_description"
        android:paddingRight="6dp"
        android:text="" />


</RelativeLayout>
